# thermal-guestbook

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
printer/: db.py  log.py  model.py  server.py  test.py  worker.py
public/: index.html
